Настройка Spring security и JWT

--- a/apiprovider/src/main/resources/application.properties
+++ b/apiprovider/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+#Spring props
 spring.datasource.url=jdbc:hsqldb:hsql://localhost/data
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+
+#Application props
+app.jwtSecret=PostalRecorderSecret
+app.jwtExpirationInSec=604800
