--- a/apiprovider/build.gradle
+++ b/apiprovider/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.10.1'
 
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
     compile project(':dataprovider')
 }
 
