--- a/mainclient/package.json
+++ b/mainclient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "audio-reporter",
+  "name": "mainclient",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/dom-mediacapture-record": "^1.0.4",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.32",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "antd": "^4.1.0",
-    "mic-recorder": "^4.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
