--- a/integrationclient/package.json
+++ b/integrationclient/package.json
@@ -16,6 +16,7 @@
     "mic-recorder": "^4.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "typescript": "^3.7.5",
     "react-scripts": "3.4.1"
   },
   "scripts": {
