--- a/mainclient/package.json
+++ b/mainclient/package.json
@@ -11,9 +11,18 @@
     "@types/node": "^12.12.32",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
-    "antd": "^4.1.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "antd": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8",
+    "typescript": "^3.7.5",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -38,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "remote-redux-devtools": "^0.5.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.2",
     "ts-loader": "^6.2.2",
