--- a/mainclient/package.json
+++ b/mainclient/package.json
@@ -16,14 +16,15 @@
     "antd": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jdenticon": "0.0.8",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "react-redux": "^7.2.0",
-    "redux-thunk": "^2.3.0",
     "redux-devtools-extension": "^2.13.8",
-    "typescript": "^3.7.5",
-    "react-scripts": "3.4.1"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
