#1 (MainClient) Доработка обработки ошибок авторизации/регистрации/валидации, возвращаемых сервером. Изменение алгоритма http-запросов

--- a/apiprovider/src/main/resources/application.properties
+++ b/apiprovider/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:hsqldb:hsql://localhost/data
 spring.datasource.username=SA
 spring.datasource.password=
+spring.datasource.hikari.connection-timeout=5000
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
