--- a/mainclient/package.json
+++ b/mainclient/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "antd": "^4.1.1",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jdenticon": "0.0.8",
