--- a/mainclient/tsconfig.json
+++ b/mainclient/tsconfig.json
@@ -20,6 +20,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": "./src",
     "jsx": "react"
   },
   "include": [
